@@ -1,6 +1,6 @@
 plugins {
     id 'info.solidsoft.pitest' version '1.15.0'
-    id 'org.springframework.boot' version '3.5.5'
+    id 'org.springframework.boot' version '3.5.6'
     id 'io.spring.dependency-management' version '1.1.7'
     id 'com.palantir.docker' version '0.36.0'
     id 'java'
@@ -20,13 +20,13 @@ dependencies {
 
     implementation project(":agonyforge-mud-core")
 
-    implementation 'org.postgresql:postgresql:42.7.7'
+    implementation 'org.postgresql:postgresql:42.7.8'
     implementation 'javax.annotation:javax.annotation-api:1.3.2'
     implementation 'com.hazelcast:hazelcast:5.5.0'
     implementation 'ch.qos.logback.access:logback-access-tomcat:2.0.6'
 
     implementation 'org.webjars:webjars-locator:0.52'
-    implementation 'org.webjars:bootstrap:5.3.7'
+    implementation 'org.webjars:bootstrap:5.3.8'
     implementation 'org.webjars:jquery:3.7.1'
     implementation 'org.webjars.npm:webstomp-client:1.2.6'
     implementation 'org.webjars.npm:sockjs-client:1.6.1'
@@ -84,6 +84,8 @@ pitest {
     excludedClasses = [
         "com.agonyforge.mud.demo.config.*"
     ]
+
+    jvmArgs.add("-XX:+EnableDynamicAgentLoading")
 }
 
 docker {
